<resources>
    <string name="app_name">ReadUp</string>
    <string name="not_yet_register">Not Yet Registered? Sign up here</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="already_register">Already Register? Sign in here</string>
    <string name="title_account">Profile</string>
    <string name="title_discover">Discover</string>
    <string name="title_comic">Comic</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="update_profile">Update Profile</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="signout">Sign Out</string>
    <string name="title_novel">Novel</string>
    <string name="enter_your_c_password">Enter your Confirm Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="add_comic">Add comic</string>
    <string name="add_novel">Add Novel</string>
    <string name="error_email">Email Format is invalid</string>
    <string name="search">Search</string>
    <string name="genre">Genre</string>
    <string name="empty_email">Email must be filled</string>
    <string name="empty_password">Password must be filled</string>
    <string name="success_login">Login Success</string>
    <string name="fail_login">Login Failed</string>
    <string name="empty_cpassword">Confirm Password must be filled</string>
    <string name="wait">Please wait</string>
    <string name="error_password">Password length must be between 5 and 20</string>
    <string name="error_cpassword">Confirm password must be same</string>
    <string name="empty_name">Name must be filled</string>
    <string name="success_register">Register Success</string>
    <string name="used_email">Email already used</string>
    <string name="success_update">Update Success</string>
    <string name="upload">Upload</string>
    <string name="add_image">Add Image</string>
    <string name="title">Title</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Your Old Password</string>
    <string name="empty_old">Old Password must be filled</string>
    <string name="error_old">Old Password is incorrect</string>
</resources>
