<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundButton"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_margin="20dp"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_login_hero" />

            </LinearLayout>

            <EditText
                android:layout_margin="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email"
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_margin="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:inputType="textPassword"
                android:hint="@string/enter_your_password"
                android:layout_width="match_parent"
                android:id="@+id/etPassword"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_margin="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:inputType="textPassword"
                android:hint="@string/enter_your_c_password"
                android:layout_width="match_parent"
                android:id="@+id/etCPassword"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_margin="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:inputType="text"
                android:hint="@string/enter_your_name"
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_margin="10dp"
                android:id="@+id/btnRegister"
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/btnlook" />

            <TextView
                android:id="@+id/tvSignIn"
                android:textStyle="italic|bold"
                android:text="@string/already_register"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>