<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/home"
                android:textSize="30sp" />

            <Button
                android:gravity="center"
                android:id="@+id/b_comic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/btnlook"
                android:text="@string/add_comic"/>

            <Button
                android:layout_gravity="center"
                android:id="@+id/b_novel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/btnlook"
                android:text="@string/add_novel"/>

        </LinearLayout>

    </ScrollView>
</FrameLayout>