<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity"
    android:background="@color/colorBackgroundButton">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/update_profile"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="10sp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="30dp"
                android:text=""
                android:hint="@string/enter_your_email"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="30dp"
                android:text=""
                android:hint="@string/enter_your_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:layout_marginHorizontal="30dp"
                android:text=""
                android:hint="@string/enter_your_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etCPassword"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:layout_marginHorizontal="30dp"
                android:text=""
                android:hint="@string/enter_your_c_password"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnUpdate"
                style="@style/btnlook"
                android:layout_width="144dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:paddingHorizontal="30dp"
                android:text="@string/update_profile"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>