<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/profile"
                android:textSize="30sp"
                android:layout_margin="10sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:layout_marginVertical="15dp"
                android:padding="15dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/name"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"  />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/email"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"  />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnUpdate"
                style="@style/btnlook"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:paddingHorizontal="30dp"
                android:text="@string/update_profile"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnSignout"
                style="@style/btnlook"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:paddingHorizontal="30dp"
                android:text="@string/signout"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>
</FrameLayout>