<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/genre"
                android:textSize="20sp" />

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_margin="10dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/search_novel_btn"
                    android:layout_width="75dp"
                    android:layout_height="24dp"
                    android:paddingHorizontal="20sp"
                    android:paddingVertical="3dp"
                    android:textSize="10sp"
                    style="@style/btnlook"
                    android:text="@string/search"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/title_novel"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rvBook">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>
</FrameLayout>