<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundButton"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_margin="20dp"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_login_hero" />

            </LinearLayout>


            <EditText
                android:id="@+id/etEmail"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/btnlook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login" />

            <com.google.android.gms.common.SignInButton
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tvSignUp"
                android:textStyle="italic|bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_yet_register"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>