<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComicActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/cspinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/comic_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/comic_list"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="188dp"
        app:layout_constraintBottom_toTopOf="@+id/upload_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:visibility="gone"
        android:id="@+id/back_button"
        style="@style/btnlook"
        android:layout_width="78dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="192dp"
        android:text="back"
        app:layout_constraintEnd_toStartOf="@+id/image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/upload_button"
        style="@style/btnlook"
        android:layout_width="78dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/image_button"
        style="@style/btnlook"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_image"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/upload_placeholder"
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:text="Uploading . . ."
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="683dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>